--- a/index.html
+++ b/index.html
@@ -2,34 +2,240 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Web Programlama Projesi</title>
-    <link rel="stylesheet" href="tasarim.css">
-    <style>
-        div{
-            font-size: 25px;
-        }
-    </style>
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+  <!-- css js -->
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
+
+  <!-- ikon ekleme-->
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+
+  <!-- Google Fonts-->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&amp;family=Montserrat:wght@400;700&amp;display=swap"
+    rel="stylesheet">
+    
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RHZGWW4903"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-RHZGWW4903');
+  </script>
+
+
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!--Sayfa boyutunu dengeleyen kod (responsive)-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Songstuff</title>
 </head>
-  
+
 <body>
-   <center><p id="baslik"><b>Web Programlama Projesi Grup 11</b></p></center>
 
-<div id="kisiler">
-<ul style="border: 1px solid black">
-<li>170420515    AYDIN    TERZİ</li>
-<li>170420822    RABİA    AKBULUT </li>
-<li>170418041    AYBİKE SENA    ŞAHİN </li>
-</ul>
-</div>
+  <!--Navbar-->
+  <nav class="navbar bg-dark navbar-expand-sm navbar-dark py-3">
+    <div class="container ">
+      <a href="#" class="navbar-brand">
+        <i class="fas fa-compact-disc fa-4x"></i>
+      </a>
+      <p class="text-white fs-1 pt-2">songstuff</p>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav ms-auto pe-5">
+          <li class="nav-item">
+            <a href="#" class="nav-link fs-4">MUSIC</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link  fs-4" onclick="uyarı()">PODCAST</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link  fs-4" onclick="uyarı()">BOOK</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link  fs-4" onclick="uyarı()">MOVIE</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-</br>
-</br>
-<div>
-<h1>Projemiz</h1>
-<p><b>Proje fikri:</b>Projemizde sitede kullanıcının mooduna göre müzik önerilecek ve chatbox 
-</br>sayesinde aynı müziği dinleyen kullanıcıların konuşabileceği bir platform yapacağız.</p>
-<a href="https://www.whichbook.net/mood-emotion/%22%3EThis" target="_blank"><em>Örnek Web Sayfası</em></a>
-</div>
+
+  <!-- Sol panel tasarımı -->
+
+  <div class="row">
+    <div class="col-lg-2">
+      <div class="solpanel">
+
+        <!--Genre sekmesi-->
+        <div class="dropdown">
+          <button class="btn btn-dark" type="button" id="dropdownMenuButton" onclick="sekme1()"
+            style="width: 100%;text-align: left;border-bottom-color:blanchedalmond; margin-top: 20%;"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            GENRE
+            <span class="plus-icon"><i class="fas fa-plus" id="genreButton"></i></span>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <input type="checkbox" id="genre1" name="genre1" value="Pop">
+            <label for="genre1">Pop</label><br>
+            <input type="checkbox" id="genre2" name="genre2" value="Rock">
+            <label for="genre2">Rock</label><br>
+            <input type="checkbox" id="genre3" name="genre3" value="Jazz">
+            <label for="genre3">Jazz</label><br>
+            <input type="checkbox" id="genre4" name="genre4" value="Classic">
+            <label for="genre4">Classic</label><br>
+            <input type="checkbox" id="genre5" name="genre5" value="Urban">
+            <label for="genre5">Urban</label><br>
+            <input type="checkbox" id="genre6" name="genre6" value="Hip-Hop">
+            <label for="genre6">Hip-Hop</label><br>
+          </div>
+        </div>
+
+        <!--Feeling sekmesi-->
+        <div class="dropdown">
+          <button class="btn btn-dark" type="button" id="dropdownMenuButton" onclick="sekme2()"
+            style="width: 100%;text-align: left;border-bottom-color:blanchedalmond; " data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            FEELING
+            <span class="plus-icon"><i class="fas fa-plus" id="feelButton"></i></span>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <input type="checkbox" id="feeling1" name="feeling1" value="Sad">
+            <label for="feeling1">Sad</label><br>
+            <input type="checkbox" id="feeling2" name="feeling2" value="Mellow">
+            <label for="feeling2">Mellow</label><br>
+            <input type="checkbox" id="feeling3" name="feeling3" value="Romantic">
+            <label for="feeling3">Romantic</label><br>
+            <input type="checkbox" id="feeling4" name="feeling4" value="Happy">
+            <label for="feeling4">Happy</label><br>
+          </div>
+        </div>
+
+        <!--Energy sekmesi-->
+        <div class="dropdown">
+          <button class="btn btn-dark" type="button" id="dropdownMenuButton" onclick="sekme3()"
+            style="width: 100%;text-align: left;border-bottom-color:blanchedalmond;" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            ENERGY
+            <span class="plus-icon"><i class="fas fa-plus" id="energyButton"></i></span>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <input type="checkbox" id="energy1" name="energy1" value="Low">
+            <label for="energy1">Low</label><br>
+            <input type="checkbox" id="energy2" name="energy2" value="Mid">
+            <label for="energy2">Mid</label><br>
+            <input type="checkbox" id="energy3" name="energy3" value="Up">
+            <label for="energy3">Up</label><br>
+            <input type="checkbox" id="energy4" name="energy4" value="Boost">
+            <label for="energy4">Boost</label><br>
+          </div>
+        </div>
+
+        <!--Duration sekmesi-->
+        <div class="dropdown">
+          <button class="btn btn-dark" type="button" id="dropdownMenuButton" onclick="sekme4()"
+            style="width: 100%;text-align: left;border-bottom-color:blanchedalmond;" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            DURATION
+            <span class="plus-icon"><i class="fas fa-plus" id="durationButton"></i></span>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <input type="checkbox" id="duration1" name="duration1" value="0 - 2 min.">
+            <label for="duration1">0 - 2 min.</label><br>
+            <input type="checkbox" id="duration2" name="duration2" value="2 - 4 min.">
+            <label for="duration2">2 - 4 min.</label><br>
+            <input type="checkbox" id="duration3" name="duration3" value="4 + min.">
+            <label for="duration3">4 + min.</label><br>
+          </div>
+        </div>
+
+        <!--(Non) Vocals sekmesi-->
+        <div class="dropdown">
+          <button class="btn btn-dark" type="button" id="dropdownMenuButton" onclick="sekme5()"
+            style="width: 100%;text-align: left;border-bottom-color:blanchedalmond;" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            (NON) VOCALS
+            <span class="plus-icon"><i class="fas fa-plus" id="vocalButton"></i></span>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <input type="checkbox" id="vocal1" name="vocal1" value="Instrumental">
+            <label for="vocal1">Instrumental</label><br>
+            <input type="checkbox" id="vocal2" name="vocal2" value="Male">
+            <label for="vocal2">Male</label><br>
+            <input type="checkbox" id="vocal3" name="vocal3" value="Female">
+            <label for="vocal3">Female</label><br>
+          </div>
+        </div>
+
+
+        <!--Contact Sekmesi-->
+        <div class="dropdown">
+          <button class="btn btn-dark" type="button" id="dropdownMenuButton" onclick="sekme6()"
+            style="width: 100%;text-align: left;border-bottom-color:blanchedalmond;" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            CONTACT
+            <span class="plus-icon"><i class="fas fa-plus" id="contactButton"></i></span>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <p>Rabia AKBULUT akbulutrabia.3453@gmail.com</p>
+            <p>Aybike Sena ŞAHİN aybikessahin@gmail.com</p>
+            <p>Aydın TERZİ aydinterzi7@gmail.com</p>
+          </div>
+        </div>
+
+        <!--About Songstuff Sekmesi-->
+        <div class="dropdown">
+          <button class="btn btn-dark" type="button" id="dropdownMenuButton" onclick="sekme7()"
+            style="width: 100%;text-align: left;border-bottom-color:blanchedalmond;" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            PURPOSE
+            <span class="plus-icon"><i class="fas fa-plus" id="purposeButton"></i></span>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <p>Dinleyicinin moduna göre müzik açan bir site</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
+
+    <div class="col-lg-10">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/mtf7hC17IBM" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+    </div>
+
+  </div>
+  </div>
+
+
+  <!-- js etkileşim için kullanılan kodlar -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
+
+
 </body>
+
 </html>
